; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cavsdsp.c_loop_filter_c1.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cavsdsp.c_loop_filter_c1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@P0 = common dso_local global i32 0, align 4
@Q0 = common dso_local global i32 0, align 4
@P1 = common dso_local global i32 0, align 4
@Q1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32)* @loop_filter_c1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loop_filter_c1(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* @P0, align 4
  %13 = load i32, i32* @Q0, align 4
  %14 = sub nsw i32 %12, %13
  %15 = call i32 @abs(i32 %14) #3
  %16 = load i32, i32* %8, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %55

18:                                               ; preds = %5
  %19 = load i32, i32* @P1, align 4
  %20 = load i32, i32* @P0, align 4
  %21 = sub nsw i32 %19, %20
  %22 = call i32 @abs(i32 %21) #3
  %23 = load i32, i32* %9, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %55

25:                                               ; preds = %18
  %26 = load i32, i32* @Q1, align 4
  %27 = load i32, i32* @Q0, align 4
  %28 = sub nsw i32 %26, %27
  %29 = call i32 @abs(i32 %28) #3
  %30 = load i32, i32* %9, align 4
  %31 = icmp slt i32 %29, %30
  br i1 %31, label %32, label %55

32:                                               ; preds = %25
  %33 = load i32, i32* @Q0, align 4
  %34 = load i32, i32* @P0, align 4
  %35 = sub nsw i32 %33, %34
  %36 = mul nsw i32 %35, 3
  %37 = load i32, i32* @P1, align 4
  %38 = add nsw i32 %36, %37
  %39 = load i32, i32* @Q1, align 4
  %40 = sub nsw i32 %38, %39
  %41 = add nsw i32 %40, 4
  %42 = ashr i32 %41, 3
  %43 = load i32, i32* %10, align 4
  %44 = sub nsw i32 0, %43
  %45 = load i32, i32* %10, align 4
  %46 = call i32 @av_clip(i32 %42, i32 %44, i32 %45)
  store i32 %46, i32* %11, align 4
  %47 = load i32, i32* @P0, align 4
  %48 = load i32, i32* %11, align 4
  %49 = add nsw i32 %47, %48
  %50 = call i32 @av_clip_uint8(i32 %49)
  store i32 %50, i32* @P0, align 4
  %51 = load i32, i32* @Q0, align 4
  %52 = load i32, i32* %11, align 4
  %53 = sub nsw i32 %51, %52
  %54 = call i32 @av_clip_uint8(i32 %53)
  store i32 %54, i32* @Q0, align 4
  br label %55

55:                                               ; preds = %32, %25, %18, %5
  ret void
}

; Function Attrs: nounwind readnone
declare dso_local i32 @abs(i32) #1

declare dso_local i32 @av_clip(i32, i32, i32) #2

declare dso_local i32 @av_clip_uint8(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
